# redarch

./: .gitignore  README.md  pyproject.toml
docs/page/: data.sets.md
docs/page/dev/: Load JSONL from a ZST archive.ipynb  index.md
notebook/: schema.submission.base.ipynb  schema.submission.ipynb
redarch/: loc.py  var.py
redarch/.include/resource/: deprecated_awards.json
redarch/cli/: __init__.py
redarch/db/: model.py
redarch/dev/: io.py
redarch/dev/parser/submission/: schema_base.py
redarch/dev/schema/base/: submission.py
