[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "redarch"
version = "0.1.0"
description = "Reddit archive utilities."
readme = "README.md"
license = "MIT"
# documentation = "https://harttraveller.com/redarch"
repository = "https://github.com/harttraveller/redarch"
authors = ["Hart Traveller <ruling_fiction.0b@icloud.com>"]
keywords = ["reddit", "pushshift"]
include = [".include/**/*"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
sqlmodel = "^0.0.18"
typer = "^0.12.3"
rich = "^13.7.1"
pydantic = "^2.8.2"
httpx = "^0.27.0"
orjson = "^3.10.6"
tqdm = "^4.66.5"
zstandard = { version = "^0.23.0", optional = true }
pandas = "^2.2.2"
msgspec = "^0.18.6"
ipykernel = { version = "^6.29.5", optional = true }
nbformat = { version = "^5.10.4", optional = true }
ipywidgets = { version = "^8.1.3", optional = true }
iprogress = { version = "^0.4", optional = true }

[tool.poetry.extras]
dev = ["zstandard"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.31"
mkdocs-jupyter = "^0.24.8"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
redarch = "redarch.cli:app"
